dashboardTraining/css/style.css
*
{
    margin:0;
    padding:0;
    font-family: Arial;
}
body
{
    background-color: rgb(248,248,250);
}
.container
{
    display: flex;
    padding-top: 60px;
    padding-left: 220px;
}
#sideNavBar
{
    background-color: rgb(51,52,73);
    height: 100vh;
    width: 220px;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 1000;
}
ul
{
    list-style: none;
}
#sideNavBarFlex
{
   display: flex;
   flex-direction: column;
   color:#b5b5b9;
}
h6
{
    color: #8a8fa2;
    padding-left: 20px;
    padding-top:40px;
}
.navOptions
{
    color: #8a8fa2;
    margin-top:10px;
    height: 45px;
    padding-left: 20px;
}
.navOptions:hover
{
    background-color: #393c4f;
    color: #b1bed1;
    cursor: pointer;
    height: 50px;
    padding-top: 5px;
    transition-timing-function: ease-in;
    transition: 0.2s;
}
.notificationCounter
{
    float: right;
    margin-right: 30px;
    margin-top: 16px;
    color: white;
    font-size: 11px;
}
#dashCount
{
    background-color: #6670d6;
    border-radius: 10px;
    padding: 1px 8px 1px 8px;
}
#formCount
{
    background-color: #49a092;
    border-radius: 10px;
    padding: 1px 8px 1px 8px;
}
#mapsCount
{
    background-color: #ea465c;
    border-radius: 10px;
    padding: 1px 8px 1px 8px;   
}
.rightAngle
{
    float: right;
    margin-right: 30px;
    margin-top: 15px;
}
.userInteraction
{
    background-color:rgb(248,248,250);
    margin-right: 15px;
}
#userSettings
{
    height: 90px;
}
#settingButton
{
    background-color: #626ed4;
    height: 33px;
    width: 93px;
    border-radius: 5px;
    border-color: transparent;
    margin-top: 30px;
    margin-right: 30px;
    float: right;
    color: white;
    font-size:12px;
}
#settingButton:hover
{
    transition: 0.5s;
    cursor: pointer;
    border-radius: 50px;
}
.navIcon
{
    margin-right: 10px;
    margin-top: 7%;
}
#cog
{
    margin-right: 6px;
}
#dashHead
{
    background-color: rgb(237,236,241);
    height: 63px;
    top: 0;
    position: fixed;
    left: 220px;
    right: 0;
    display: flex;
    /* Z-index used as the ribbon and chat boxes were overlapping with this */
    z-index: 900;
}
#hamburger
{
    margin-top: 22px;
    margin-left: 20px;
}
#dropDown
{
    min-width: 75px;
    margin-top: 15px;
    margin-left: 35px;
    height: 35px;
    border-radius: 3px;
    border: none;
    width: 75px;
    background-color: #f8f9fb;
    font-size: 13px;
}
#searchDiv
{
    margin-top: 15px;
    margin-left: 520px;
}
#searchBox
{
    background-color: #e1e1eb;
    border-radius: 20px;
    border: none;
    height: 32px;
    width: 170px;
}
#searchIcon
{
    color: #9da2ae;
    position: relative;
    font-size: 12px;
    top: 1px;
    left: -40px;
}
#searchBox::placeholder
{
    margin-left: 20px;
    color: #8c9099;
    font-size: 12px;
    padding-left: 20px;
}
#dashHeadContainer
{
    margin-top: 12px;
    margin-left: 50px;
    display: flex;
    justify-content: space-evenly;
}
#langFlag
{
    margin-right: 10px;
    margin-top: 12px;
    width: 20px;
    height: 14px;  
}
#languageSelector
{
    margin-top:10px;
    margin-right: 50px;
    color: #8187a1;
    font-size: 15px;
}
#expandIcon
{
    margin-top: 12px;
    margin-right: 15px;
    color: #7e819d;
}
#bellIcon
{
    font-size: 22px;
    margin-top: 8px;
    margin-left: 20px;
    color: #71778d;
}
#adminIcon
{
    margin-top: 5px;
    margin-left: 30px;
    height: 30px;
}
.settingGreetings
{
    margin-top:25px;
    float: left;
    margin-left: 30px;
    color:#4e565d;
}
#welcomeText
{
    margin-top:8px;
    font-size: 14px;
}
.userStats
{
    display: flex;
    flex-wrap: wrap;
    /*wrap not working*/
    justify-content: space-evenly;
}  
.statsCard
{
    background-color: #626ed4;
    font-size: 16px;
    border-radius: 5px;
    height: 160px;
    width: 260px;
    color:#abb3e3;
    justify-content: center;
    padding-left: 10px;
    max-width: 300px;
    flex-grow: auto;
}
.statsIconsDiv
{
    float: left;
    margin-left: 18px;
    margin-top: 25px;
    background-color:#7b83d9;
    height: 60px;
    width: 60px;
    border-radius: 3px;
}
.statsIcons
{
    padding: 10px;
}
.statsHeads
{
    margin-top: 25px;
    margin-left: 100px;
}
.ribbon
{
    float: right;
    margin-top: 16px;
    color: white;
    width: 70px;
    height: 30px;
    text-align: center;
    font-size: 12px;
    position: relative;
}
.ribbon::before
{
    content: "";
    height: 0px;
    width: 0px;
    position: absolute;
    left: 0px;
    border-left: 15px solid #626ed4;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
}
.ribbonValue
{
    margin-top: 8px;
    margin-left: 10px;
}
.first
{
    background-color: #46a399;
}
.second
{
    background-color: #e74a67
}
.third
{
    background-color: #3aa5f7
}
.fourth
{
    background-color: #f6b443
}
.statsValues
{
    color: #f7f8fe;
    font-size: 22px;
    margin-top: 15px;
    margin-left: 100px;
}
.statsFoots
{
    margin-top: 32px;
    margin-left: 15px;
    font-size: 15px;
}
.upArrow
{
    color: #46a399
}
.downArrow
{
    color: #e74a67; 
}
.upDownArrow
{
    float: left;
    margin-left: 180px;
    margin-top: -30px;
    font-size: 20px;
}
.arrows
{
    float: right;
    margin-top: -15px;
    margin-right: 25px;
}
#companyName
{
    font-size: 22px;
    color: #b5b5b9;
    text-align: center;
    margin-top: 24px;
}
.userActions
{
    display: flex;
}
#userTransactions
{
    background-color:white;
    height:auto;
    width: 770px;
    margin-left: 28px;
    margin-top: 34px;
    border-radius: 5px;
}
#userChat
{
    background-color:white;
    height: 460px;
    width: 360px;
    margin-left: 30px;
    margin-top: 34px;
    border-radius: 5px;
}
table,th,td
{
    border-collapse: collapse;
    height: 40px;
    margin-left: 25px;
    width: 720px;
}
th
{
    border-top: 1px solid #dde0e3;
    border-bottom: 2px solid #dde0e3;
    text-align: left;
    padding-left: 20px;
    height: 40px;
    font-size: 14px;
    color: #75797c;
}
.userIcon
{
    height: 50px;
    width: 50px;
    float: left;
    border-radius: 50px;
    margin-right: 20px;
}
td
{
    border-top: 1px solid #dde0e3;
    border-bottom: 1px solid #dde0e3;
    text-align: left;
    padding-left: 20px;
    height: 70px;
    font-size: 13px;
    color: #87888d;
    align-content: center;
}
.userName
{
    margin-top: 18px;
    margin-left: 50px;
}
.idColumn
{
    width: 200px;
}
.amountColumn
{
    width: 350px;
}
.dateColumn
{
    width: 400px;
}
#statusFlex
{
    display: flex;
}
.userStatus
{
    background-color: green;
    color: white;
    border-radius: 3px;
    padding: 3px;
    max-width: 50px;
    font-size: 10px;
    margin-top: 5px;
    height: 10px;
}
.editButton
{
    margin-left: 50px;
    background-color: #666dd4;
    color: white;
    border: none;
    width: 40px;
    border-radius: 3px;
    height: 30px;
}
.editButton:hover
{
    transition: 0.5s;
    cursor: pointer;
    border-radius: 50px;
}
#chatBox
{
    margin-top: -10px;
    margin-left: 25px;
    height: 320px;
    width: 310px;
    border-radius: 5px;
    overflow: scroll;
}
#chatBox::-webkit-scrollbar
{
    width: 5px;
    height: 0px;
}
#chatBox::-webkit-scrollbar-thumb 
{
    background-color: #d7dbde;
}
#textBox
{
    margin-top: 25px;
    margin-left: 24px; 
    border-radius: 5px;
    height: 35px;
    width: 230px;
    border-style: solid;
    border-color: #dfe0e2;
}
#textBox::placeholder
{
    font-size: 15px;
    padding-left: 15px;
}
#sendButton
{
    border-radius: 5px;
    border: none;
    margin-left: 20px;
    background-color: #47a59a;
    width: 50px;
    height: 35px;
    color: white;
    font-size: 12px;
}
.messageBox 
{
    max-width: 180px;
    height: auto;
    margin-top: 20px;
    border-radius: 10px;
    padding: 15px;
    font-family: arial;
    position: relative;
    font-size: 12px;
    line-height: 20px;
}
.senderUserName
{
    font-weight: bold;
    color: #4753ba;
    text-align: left;
    padding-bottom: 2px;
}
.receiverUserName
{
    font-weight: bold;
    color: #4753ba;
    text-align: right;
    padding-bottom: 2px;
}
#senderFlex
{
    display: flex;
}
.sender
{   
    margin-left: 10px;
    background-color: #dfdff6;
    color: #5f66b6;
}
.sender:before
{
    content: "";
    width: 0px;
    height: 0px;
    position: absolute;
    border-left: 15px solid transparent;
    border-right: 15px solid #dfdff6;
    border-top: 15px solid #dfdff6;
    border-bottom: 15px solid transparent;
    left: -16px;
    top: 0px;
}
.senderTimeFlex
{
    display: flex;
    flex-direction: column;
}
.senderTime
{
    color: #909396;
    font-size: 12px;
    margin-left: 10px;
    margin-top: 10px;
}
#receiverFlex
{
    flex-direction: row-reverse;
    display: flex;
    margin-left: 40px;
    margin-right: -30px;
}
.chatUserIcons
{
    margin-top: 15px;
}
.receiver
{
    margin-right: 20px;
    background-color: #eff0f4;
    color: #898e94;
    text-align: right;
}
.receiver:before
{
    content: "";
    width: 0px;
    height: 0px;
    position: absolute;
    border-left: 15px solid #eff0f4;
    border-right: 15px solid transparent;
    border-top: 15px solid #eff0f4;
    border-bottom: 15px solid transparent;
    right: -16px;
    top: 0px;
}
.receiverTime
{
    color: #909396;
    float: right;
    font-size: 12px;
    margin-left: 10px;
    margin-top: 10px;
    margin-right: 50px;
}
.receiverTimeFlex
{
    display: flex;
    flex-direction: column;
}
@media (max-width: 500px)
{
    #sideNavBar
    {
        display: none;
    }
    #dashHead
    {
        left: 0;
    }
}
/*

less css @var
sass css $var
variable declaration
modularity in css code
functions and imports
mixin

media query
meta name viwport 1.0
google font : roboto

jquery on ham icon to toggle sideNavBar

link hover
ease in ease out
height

button
keyframe animation

add animation over all clickable area

make page reponsive
*/

